# docs

./: .env.example  .gitattributes  .gitignore  .npmignore  .prettierignore  AGENTS.md  BLOCKED_TASKS.md  CONTEXT.md  README.md  SECURITY.md  eslint.config.js  package.json  playwright.config.ts  pnpm-workspace.yaml  skills-lock.json  tsconfig.json  vitest.config.ts
.backlog/: .context.yaml  AGENTS.md  index.yaml
.backlog/01-r0-lab/: index.yaml
.backlog/02-r1-evidence-core/: index.yaml
.backlog/03-r2-exploration/: index.yaml
.backlog/04-r3-publication/: index.yaml
.backlog/05-r4-production/: index.yaml
.backlog/bugs/: B001-markstale-discards-claimstore.todo  B002-audio-session-fifo-test-assert.todo  B003-evidence-critic-free-text-reas.todo  B004-source-tools-accepts-index-ide.todo  (+9 more)
.codex/: README.md
.plan/: 01-goals-and-constraints.md  02-agent-architecture.md  03-specification.md  04-conversation-transcript.md  05-self-review.md  06-task-breakdown.md  07-automatic-ingestion-v3.md  README.md  architecture.html
.ultradyn/: manifest.json
docs/: _map.md  api.md  architecture.md  operations.md  providers.md  testing.md
project-website/: README.md  index.html
scaffold/: .gitignore  .gitignore.template  pnpm-lock.yaml
scripts/: gen-answer-composer-fixtures.mts  package-smoke.mjs
tauri-app/: .gitignore  README.md  package.json
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/icons/: icon.icns
tauri-app/src-tauri/macos/: Info.plist
tauri-app/src-tauri/src/: lib.rs  main.rs
(+921 files in other folders)
