[package]
name = "ultradyn-docs-desktop"
version = "0.1.0"
description = "Native desktop shell for Ultradyn Docs"
authors = ["Ultradyn"]
license = "MIT"
repository = "https://github.com/ultradyn/docs"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "ultradyn_docs_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
getrandom = "0.2"
serde_json = "1"
tauri = { version = "2", features = [] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
